--- a/ynab_importer/Cargo.toml
+++ b/ynab_importer/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-file_system = { path= "../file_system" }
-xml-rs = "0.8.4"
+quick-xml = { version = "0.29.0", features = [ "serialize" ] }
+serde = { version = "1.0.171", features = [ "derive" ] }
+serde-xml-rs = "0.6.0"
+thiserror = "1.0.43"
 
