--- a/camt053_parser/Cargo.toml
+++ b/camt053_parser/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+common = { path = "../common" }
 quick-xml = { version = "0.29.0", features = [ "serialize" ] }
 serde = { version = "1.0.171", features = [ "derive" ] }
 serde-xml-rs = "0.6.0"
