--- a/ynab_csv/Cargo.toml
+++ b/ynab_csv/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 common = { path = "../common" }
+output_tracker = { path = "../output_tracker" }
 csv = "1.2.2"
 serde = { version = "1.0.171", features = ["derive"] }
 thiserror = "1.0.43"
