--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2021"
 [dependencies]
 camt053_parser = { path = "../camt053_parser" }
 thiserror = "1.0.44"
-clap = "4.4.1"
+clap = { version = "4.4.1", features = ["derive"] }
 ynab_csv = { path = "../ynab_csv" }
