--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -10,3 +10,7 @@ camt053_parser = { path = "../camt053_parser" }
 thiserror = "1.0.44"
 clap = { version = "4.4.1", features = ["derive"] }
 ynab_csv = { path = "../ynab_csv" }
+serde = { version = "1.0.188", features = ["derive"] }
+serde_yaml = "0.9.25"
+home = "0.5.5"
+regex = "1.9.4"
